--- a/workspaces/announcements/plugins/announcements/package.json
+++ b/workspaces/announcements/plugins/announcements/package.json
@@ -88,6 +88,7 @@
     "@backstage/frontend-test-utils": "^0.4.0",
     "@backstage/plugin-signals": "^0.0.24",
     "@backstage/test-utils": "^1.7.12",
+    "@backstage/plugin-home": "^0.8.6",
     "@testing-library/jest-dom": "^6.3.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
